--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,10 @@
 	"rules": {
 		"semi": ["error", "always"],
 		"eol-last": 0,
-		"max-len": [2, 80, 4]
+		"max-len": [2, 80, 4],
+		"no-console": 0,
+		"no-unused-expressions": 0,
+		"quotes": 0,
+		"linebreak-style": 0
 	}
 }
