--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
 		"no-console": 0,
 		"no-unused-expressions": 0,
 		"quotes": 0,
-		"linebreak-style": 0
+		"linebreak-style": 0,
+		"no-underscore-dangle": 0
 	}
 }
