--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
 		"no-unused-expressions": 0,
 		"quotes": 0,
 		"linebreak-style": 0,
-		"no-underscore-dangle": 0
+		"no-underscore-dangle": 0,
+		"no-restricted-syntax": 0
 	}
 }
