Test for routes and controller
API-test: Entries completed.
[finishes #159131059]

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
 		"quotes": 0,
 		"linebreak-style": 0,
 		"no-underscore-dangle": 0,
-		"no-restricted-syntax": 0
+		"no-restricted-syntax": 0,
+		"import/no-extraneous-dependencies": 0
 	}
 }
