--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-import": "^2.12.0"
+    "eslint-plugin-import": "^2.12.0",
+    "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0"
   },
   "scripts": {
-    "start:dev": "nodemon --watch server --exec babel-node -- server/server.js"
+    "start:dev": "nodemon --watch server --exec babel-node -- server/server.js",
+    "test": "mocha --require babel-core/register \"server/test/**/*.js\" || true"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
