--- a/package.json
+++ b/package.json
@@ -6,6 +6,23 @@
   "repository": "https://github.com/mindsworth/mydiary-project/",
   "author": "Chigoziem Nwaiwu <princegoziem@gmail.com>",
   "license": "MIT",
+  "nyc": {
+    "include": [
+      "server/controllers/*.js",
+      "server/models/*.js",
+      "server/routes/*.js"
+    ]
+  },
+  "scripts": {
+    "start:dev": "nodemon --watch server --exec babel-node -- server/server.js",
+    "test": "nyc --reporter=html mocha --require babel-core/register server/test/**/*.test.js --exit && nyc report",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "morgan": "^1.9.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -13,19 +30,12 @@
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "coveralls": "^3.0.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.12.0",
     "mocha": "^5.2.0",
-    "mocha-lcov-reporter": "^1.3.0"
-  },
-  "scripts": {
-    "start:dev": "nodemon --watch server --exec babel-node -- server/server.js",
-    "test": "mocha --require babel-core/register \"server/test/**/*.js\" || true"
-  },
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^12.0.2"
   }
 }
