--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "start:dev": "nodemon --watch server --exec babel-node -- server/server.js",
+    "web": "./node_modules/.bin/forever -m 5 server.js",
     "test": "nyc --reporter=html mocha --require babel-core/register server/test/**/*.test.js --exit && nyc report",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
