--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
 		"linebreak-style": 0,
 		"no-underscore-dangle": 0,
 		"no-restricted-syntax": 0,
-		"import/no-extraneous-dependencies": 0
+		"import/no-extraneous-dependencies": 0,
+		"class-methods-use-this": 0,
+		"consistent-return": 0
 	}
 }
