--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
 		"no-restricted-syntax": 0,
 		"import/no-extraneous-dependencies": 0,
 		"class-methods-use-this": 0,
-		"consistent-return": 0
+		"consistent-return": 0,
+		"no-multi-str": 0
 	}
 }
