--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ branches:
   only:
     - develop
     
+ before_script:
+  - psql -c 'create database travis;' -U postgres
+
+env:
+- SECRET_TOKEN=abcxyz
+
 script:
   - npm test
   
