--- a/package.json
+++ b/package.json
@@ -14,25 +14,31 @@
     ]
   },
   "scripts": {
-    "start": "node ./dist/server.js",
+    "start": "cross-env-shell NODE_ENV=production node ./dist/server.js",
     "heroku-postbuild": "npx babel server/ --out-dir dist/ --ignore server/test",
-    "start:dev": "nodemon --watch server --exec babel-node -- server/server.js",
-    "web": "./node_modules/.bin/forever -m 5 server.js",
-    "test": "nyc --reporter=html mocha --require babel-core/register server/test/**/*.test.js --exit && nyc report",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "start:dev": "cross-env-shell NODE_ENV=development nodemon --watch server --exec babel-node server/server.js",
+    "test2": "cross-env-shell NODE_ENV=test yarn drop:create:table && nyc --reporter=html mocha --require babel-core/register server/test/route.test.js --exit && nyc report",
+    "test": "cross-env-shell NODE_ENV=test yarn drop:create:table && cross-env-shell NODE_ENV=test nyc --reporter=html mocha --require babel-core/register server/test/**/*.test.js --exit && nyc report",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "drop:create:table": "babel-node server/models/database/test_table.js"
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-register": "^6.26.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "decode": "^0.3.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
-    "validatorjs": "^3.14.2"
+    "sinon": "^6.1.4",
+    "sinon-chai": "^3.2.0",
+    "validatorjs": "^3.14.2",
+    "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -42,11 +48,14 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "coveralls": "^3.0.2",
+    "cross-env": "^5.2.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.12.0",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^12.0.2"
+    "nyc": "^12.0.2",
+    "sinon-express-mock": "^2.0.5",
+    "supertest": "^3.1.0"
   }
 }
