--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "cross-env": "^5.2.0",
     "decode": "^0.3.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
@@ -37,8 +39,7 @@
     "pg": "^7.4.3",
     "sinon": "^6.1.4",
     "sinon-chai": "^3.2.0",
-    "validatorjs": "^3.14.2",
-    "babel-polyfill": "^6.26.0"
+    "validatorjs": "^3.14.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -49,7 +50,6 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "coveralls": "^3.0.2",
-    "cross-env": "^5.2.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.12.0",
