--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-register": "^6.26.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.11.0",
     "cors": "^2.8.4",
     "cross-env": "^5.2.0",
     "decode": "^0.3.0",
@@ -41,6 +42,8 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
     "morgan": "^1.9.0",
+    "multer": "^1.3.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "pg": "^7.4.3",
     "sinon": "^6.1.4",
     "sinon-chai": "^3.2.0",
