--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "multer-storage-cloudinary": "^2.2.1",
+    "node-cron": "^1.2.1",
+    "nodemailer": "^4.6.8",
+    "nodemailer-juice": "^1.0.0",
     "pg": "^7.4.3",
     "sinon": "^6.1.4",
     "sinon-chai": "^3.2.0",
