--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "body-parser": "^1.18.3",
     "cloudinary": "^1.11.0",
     "cors": "^2.8.4",
+    "cron": "^1.4.1",
     "cross-env": "^5.2.0",
     "decode": "^0.3.0",
     "dotenv": "^6.0.0",
@@ -44,7 +45,6 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "multer-storage-cloudinary": "^2.2.1",
-    "node-cron": "^1.2.1",
     "nodemailer": "^4.6.8",
     "nodemailer-juice": "^1.0.0",
     "pg": "^7.4.3",
