--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "multer-storage-cloudinary": "^2.2.1",
     "nodemailer": "^4.6.8",
     "nodemailer-juice": "^1.0.0",
+    "nodemon": "^1.18.4",
     "pg": "^7.4.3",
     "sinon": "^6.1.4",
     "sinon-chai": "^3.2.0",
