--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,3 @@
 {
-    "presets": [
-        ["env", {
-            "targets": {
-                "node": "8"
-            }
-        }]
-    ],
-    "plugins": [
-        "transform-object-rest-spread"
-    ]
+	"presets": ["@babel/preset-env"]
 }
