--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,25 @@
 {
-	"extends": "airbnb-base",
-	"rules": {
-		"semi": ["error", "always"],
-		"eol-last": 0,
-		"max-len": [2, 80, 4],
-		"no-console": 0,
-		"no-unused-expressions": 0,
-		"quotes": 0,
-		"linebreak-style": 0,
-		"no-underscore-dangle": 0,
-		"no-restricted-syntax": 0,
-		"import/no-extraneous-dependencies": 0,
-		"class-methods-use-this": 0,
-		"consistent-return": 0,
-		"no-multi-str": 0
-	}
+    "env": {
+        "browser": true,
+        "es6": true
+    },
+    "extends": ["airbnb-base", "plugin:prettier/recommended"],
+    "plugins": ["prettier"],
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
+    "rules": {
+        "semi": "off",
+        "indent": ["error", "tab"],
+        "no-tabs": ["error", { "allowIndentationTabs": true }],
+        "comma-dangle": ["error", "never"],
+        "implicit-arrow-linebreak": ["error", "below"],
+        "function-call-argument-newline": ["error", "consistent"],
+        "prettier/prettier": ["error"]
+    }
 }
