--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,27 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true
-    },
-    "extends": ["airbnb-base", "plugin:prettier/recommended"],
-    "plugins": ["prettier"],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "parserOptions": {
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
-    "rules": {
-        "semi": "off",
-        "indent": ["error", "tab"],
-        "no-tabs": ["error", { "allowIndentationTabs": true }],
-        "comma-dangle": ["error", "never"],
-        "implicit-arrow-linebreak": ["error", "below"],
-        "function-call-argument-newline": ["error", "consistent"],
-        "prettier/prettier": ["error"]
-    }
+	"env": {
+		"browser": true,
+		"es6": true
+	},
+	"extends": ["airbnb-base", "plugin:prettier/recommended"],
+	"plugins": ["prettier"],
+	"globals": {
+		"Atomics": "readonly",
+		"SharedArrayBuffer": "readonly"
+	},
+	"parserOptions": {
+		"ecmaVersion": 2018,
+		"sourceType": "module"
+	},
+	"rules": {
+		"semi": "off",
+		"indent": ["error", "tab"],
+		"no-tabs": ["error", { "allowIndentationTabs": true }],
+		"comma-dangle": ["error", "never"],
+		"implicit-arrow-linebreak": ["error", "below"],
+		"function-call-argument-newline": ["error", "consistent"],
+		"prettier/prettier": ["error"],
+		"class-methods-use-this": "off",
+		"consistent-return": ["error", { "treatUndefinedAsUnspecified": false }]
+	}
 }
