--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test2": "cross-env-shell NODE_ENV=test yarn drop:create:table && nyc --reporter=html mocha --require babel-core/register server/test/route.test.js --exit && nyc report",
     "test": "cross-env-shell NODE_ENV=test yarn drop:create:table && cross-env-shell NODE_ENV=test nyc --reporter=html mocha --opts ./mocha.opts server/test/**/*.test.js --exit && nyc report",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "migration": "sequelize db:migrate",
     "drop:create:table": "babel-node server/models/database/test_table.js"
   },
   "dependencies": {
@@ -43,6 +44,7 @@
     "nodemon": "^1.19.4",
     "pg": "^7.12.1",
     "sequelize": "^5.19.6",
+    "sequelize-cli": "^5.5.1",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
     "swagger-ui-express": "^4.1.2",
